[gd_scene load_steps=5 format=3 uid="uid://dqqvsineiu3l8"]

[ext_resource type="Script" path="res://objects/PauseMenu.gd" id="1_g7gyd"]
[ext_resource type="Theme" uid="uid://dh6bxteu5ltau" path="res://resources/pause_buttons.tres" id="2_i60xi"]
[ext_resource type="Texture2D" uid="uid://bw6iupebtp6h3" path="res://assets/Level/Other/audioon.png" id="3_2tgmb"]
[ext_resource type="Texture2D" uid="uid://gc26gne61qxx" path="res://assets/Level/Other/audiooff.png" id="4_ot3tb"]

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 5
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g7gyd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -952.0
offset_top = -470.0
offset_right = 997.0
offset_bottom = 547.0
color = Color(0.0196078, 0.0196078, 0.0196078, 0.360784)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -400.0
offset_top = -180.0
offset_right = 400.0
offset_bottom = 266.0
theme = ExtResource("2_i60xi")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Continue"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Settings" type="Button" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Settings"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MainMenu" type="Button" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
text = "Main Menu"

[node name="AudioButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -751.0
offset_top = 304.0
offset_right = -655.0
offset_bottom = 400.0
toggle_mode = true
texture_normal = ExtResource("3_2tgmb")
texture_pressed = ExtResource("4_ot3tb")
stretch_mode = 0

[connection signal="pressed" from="VBoxContainer/MarginContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer3/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="toggled" from="AudioButton" to="." method="_on_audio_button_toggled"]
